# Ispravitel_ek

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT_PLAN.md  Dockerfile  Makefile  PROJECT_MEMORY.md  PRP.md  README.md  README.md.bak  agent.py  alerts.py  async_pipeline.py  cache.py  catalog_api.py  config.py  config_improved.py  crontab.txt  docker-compose.yml  exceptions.py  flow.yaml  import_excel.py  ispravitel_context.md  lcsc_client.py  llm_client.py  logger.py  main.py  main_improved.py  metrics.py  pipeline.py  pyproject.toml  pytest.ini  reporter.py  requirements.txt  sequence_diagram.puml  services.py  test_agent_scheduler.py  test_catalog_api_mock.py  test_config.py  (+9 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: FAQ_TROUBLESHOOTING.md
mocks/: catalog_api_mock.py  lcsc_mock.py  llm_mock.py
scripts/: setup_ci.ps1
tests/: conftest.py  sample.xlsx  test_agent.py  test_alerts.py  test_async_pipeline.py  test_cache.py  test_catalog_api_real.py  test_container_smoke.py  test_project.py  test_reporter.py  test_validation.py
