[project]
name = "bot-ispravitel"
version = "0.1.0"
description = "Автоматический бот для исправления и нормализации номенклатуры"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
